2006-10-16  Douglas Bates  <bates@stat.wisc.edu>

	* DESCRIPTION (Version): New version

	* R/lmer.R (resid): Methods for resid and residuals generics
	should distinguish between glmer and lmer classes.

2006-10-15  Douglas Bates  <bates@stat.wisc.edu>

	* src/lmer.c (internal_mer_update_ZXy): double transpose to sort
	columns in ZtZ.

2006-10-13  Douglas Bates  <bates@stat.wisc.edu>

	* src/glmer.c (glmer_linkinv): Repair code for probit link here
	and in a couple of other places.
	
2006-10-12  Douglas Bates  <bates@stat.wisc.edu>

	* src/glmer.c: pass and store family-link type allowing internal
	evaluation of link, linkinv, etc. for common families.

	* src/lmer.[ch],Wishart.[ch],lme4_utils.[ch]: Move utility
	functions from lmer.[ch] to make code structure cleaner.

2006-10-10  Douglas Bates  <bates@stat.wisc.edu>

	* DESCRIPTION: Release 0.9975-3
	* src/lmer.c (Zt_carryOver): correct the calculation of nnz.

2006-09-27  Douglas Bates  <bates@R-project.org>

	* R/lmer.R (lmer): Moved argument checking and construction of
	model matrices, etc. to auxillary functions for use with functions
	to fit more general models.  Changed default method for GLMMs to
	Laplace and default for usePQL to FALSE.

2006-09-22  Douglas Bates  <bates@stat.wisc.edu>

	* src/lmer.c (mer_create and other functions and files): Change
	the status vector to an integer vector and just record the stage
	as 0 to 4.  Also record REML as an integer and glmm method as an
	integer instead of strings.

2006-09-22  Douglas Bates  <bates@stat.wisc.edu>

	* R/AllClass.R (and many other files): delete the useScale slot in
	an mer object and incorporate the scale in the devComp slot.  A
	negative value indicates a fixed scale.

2006-09-21  Douglas Bates  <bates@stat.wisc.edu>

	* R/AllClass.R: remove family and call slots from the mer object.
	Adjust mer_create (src/lmer.c) and associated files accordingly.

2006-09-11  Douglas Bates  <bates@R-project.org>
